<resources>
    <string name="app_name">SUM</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_camera">Camera</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_bus" translatable="false">Bus</string>
    <string name="title_schedules">Schedules</string>
    <string name="schedule">Schedule</string>
    <string name="text_departure">Departure:</string>
    <string name="text_startingpoint">Starting point:</string>
    <string name="departure_date">Departure date</string>
    <string name="search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="choose_language">Choose language</string>
    <string name="choose_theme">Choose theme</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto">Auto</string>
    <string name="map_search_box">Enter Address, City or Zip Code</string>
    <string name="ar_navigation">Navigation</string>
    <string name="open_bus_recognition">Bus Recognition</string>
    <string name="schedule_assistant">Schedule Assistant</string>
    <string name="select_image">Select image</string>
    <string name="select_image_from_album">Select image from album</string>
    <string name="take_photo">Take photo</string>
    <string name="start_from">Start from</string>
    <string name="send_to">Send to</string>

    <!--MLKit Preferences-->
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>
    <string name="pref_key_show_language_tag" translatable="false">slt</string>
    <string name="geospatial_pose" translatable="false" >LAT/LNG: %.6f˚, %.6f˚\n\t\t\tACCURACY: %.2fm\nALTITUDE: %.2fm\n\t\t\tACCURACY: %.2fm\nHEADING: %.1f˚\n\t\t\tACCURACY: %.1f˚</string>
    <string name="earth_state" translatable="false">EarthState: %1$s\nTrackingState: %2$s\n%3$s</string>
</resources>