<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.sum.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_schedules"
            app:destination="@id/navigation_schedules" />
    </fragment>

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.sum.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_schedules"
        android:name="com.example.sum.ui.bus.BusFragment"
        android:label="@string/title_schedules"
        tools:layout="@layout/fragment_bus" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.sum.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <activity
        android:id="@+id/dialogFlow"
        android:name="com.example.sum.DialogFlow"
        android:label="activity_dialog_flow"
        tools:layout="@layout/activity_dialog_flow" />
</navigation>