<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">

    <!--    <androidx.fragment.app.FragmentContainerView
            android:id="@+id/arFragment"
            android:name="com.google.ar.sceneform.ux.ArFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonOpenARNavigation"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="?attr/colorSecondary"
            android:minLines="2"
            android:text="@string/ar_navigation"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            app:icon="@drawable/ic_baseline_navigation_24"
            app:iconTint="?attr/colorOnSecondary" />

        <Button
            android:id="@+id/buttonOpenOCR"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="?attr/colorSecondary"
            android:minLines="2"
            android:text="@string/open_bus_recognition"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            app:icon="@drawable/ic_baseline_ocr_24"
            app:iconTint="?attr/colorOnSecondary" />

        <Button
            android:id="@+id/buttonOpenDialogFlow"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            android:minLines="2"
            android:text="@string/schedule_assistant"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="18sp"
            app:icon="@drawable/ic_baseline_chat_24"
            app:iconTint="?attr/colorOnSecondary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>